--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-daisyui": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "socket.io-client": "^4.7.5",
+    "sweetalert2": "^11.10.6",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
   },
